--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -1,8 +1,8 @@
 <% content_for(:title, @statement.source_speaker.full_name + (@statement.source_speaker.body ? " (#{@statement.source_speaker.body.short_name})" : "") + ': ' + "„#{@statement.content}“".truncate(45)) %>
 <% content_for(:description, 'Tento výrok byl ověřen jako ' + @statement.approved_assessment.veracity.name) %>
-<%# TODO: statement preview images need to be updated with new graphic %>
+<%# TODO: statement preview images need to be updated with new brand graphic %>
 <%# content_for(:image_src, @statement.preview_image.attached? ? polymorphic_url(@statement.preview_image) : nil) %>
-<% content_for(:twitter_card, 'summary_large_image') %>
+<%# <% content_for(:twitter_card, 'summary_large_image') %> %>
 
 <div class="row g-10">
   <div class="col col-4 col-md-2">
