--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -2,7 +2,7 @@
 <% content_for(:description, 'Tento výrok byl ověřen jako ' + @statement.approved_assessment.veracity.name) %>
 <%# TODO: statement preview images need to be updated with new brand graphic %>
 <%# content_for(:image_src, @statement.preview_image.attached? ? polymorphic_url(@statement.preview_image) : nil) %>
-<%# <% content_for(:twitter_card, 'summary_large_image') %> %>
+<%# content_for(:twitter_card, 'summary_large_image') %>
 
 <div class="row g-10">
   <div class="col col-4 col-md-2">
