Add fb domain verification

--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -34,3 +34,4 @@
     image: content_for?(:image_src) ? yield(:image_src) : asset_url('default-meta-image.png')
   }
 %>
+<meta name="facebook-domain-verification" content="g5r899o294pnsnhtkklek30keudwy4" />
