--- a/app/assets/stylesheets/core/_base.scss
+++ b/app/assets/stylesheets/core/_base.scss
@@ -16,8 +16,9 @@ html {
   -ms-text-size-adjust: 100%;
   -ms-overflow-style: scrollnav-bar;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  touch-action: pan-y !important;
-  scrollbar-width:thin
+  overflow: hidden;
+  overflow-y: auto;
+  width: 100%;
 }
 body {
   margin: 0;
@@ -28,6 +29,7 @@ body {
   font-family: $font-family;
   color: $dark;
   background-color: $body-bg;
+  width: 100%;
 }
 
 main {
