--- a/app/views/article/presidential_election.html.erb
+++ b/app/views/article/presidential_election.html.erb
@@ -49,7 +49,7 @@
                             <path d="M0.0507812 6.4745L1.38245 5.10858L6.00525 9.6629L15.5667 0.135742L16.9326 1.50166L6.00525 12.3947L0.0507812 6.4745Z" fill="white"></path>
                           </svg>
                         </span>
-                        <span class="fs-1 text-none text-white">4</span>
+                        <span class="fs-1 text-none text-white">17</span>
                       </a>
                       <div class="d-flex align-items-center " title="Neověřitelné" href="/politici/andrej-babis-183?hodnoceni[]=neoveritelne">
                         <span class="w-35px h-35px d-flex align-items-center justify-content-center bg-gray rounded-circle me-2">
@@ -61,22 +61,22 @@
                       </div>
                     </div>
                     <div class="">
-                      <div class="d-flex align-items-center mb-2 " title="Nepravda" href="/politici/andrej-babis-183?hodnoceni[]=nepravda">
+                      <a class="d-flex align-items-center mb-2 " title="Nepravda" href="/politici/andrej-babis-183?hodnoceni[]=nepravda">
                         <span class="w-35px h-35px d-flex align-items-center justify-content-center bg-red rounded-circle me-2">
                           <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M12.8642 1.58955L11.4983 0.223633L6.80319 4.90351L2.1081 0.223633L0.742188 1.58955L5.43348 6.26562L0.742188 10.9417L2.1081 12.3076L6.80319 7.62773L11.4983 12.3076L12.8642 10.9417L8.17291 6.26562L12.8642 1.58955Z" fill="white"></path>
                           </svg>
                         </span>
-                        <span class="fs-1 text-none text-white">0</span>
-                      </div>
-                      <div class="d-flex align-items-center" title="Zavádějící" href="/politici/andrej-babis-183?hodnoceni[]=zavadejici">
+                        <span class="fs-1 text-none text-white">2</span>
+                      </a>
+                      <a class="d-flex align-items-center" title="Zavádějící" href="/politici/andrej-babis-183?hodnoceni[]=zavadejici">
                         <span class="w-35px h-35px d-flex align-items-center justify-content-center bg-secondary rounded-circle me-2">
                           <svg width="4" height="22" viewBox="0 0 5 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2.38458 25.9392C1.77482 25.9392 1.25598 25.7199 0.822722 25.2866C0.389467 24.8534 0.170166 24.3292 0.170166 23.7248C0.170166 23.1204 0.389467 22.5962 0.822722 22.1629C1.25598 21.7297 1.78016 21.5104 2.38458 21.5104C2.989 21.5104 3.51319 21.7297 3.94644 22.1629C4.3797 22.5962 4.599 23.1204 4.599 23.7248C4.599 24.1259 4.49737 24.495 4.29946 24.832C4.09621 25.169 3.82877 25.4364 3.49714 25.6397C3.16551 25.8429 2.79109 25.9392 2.38458 25.9392ZM4.05877 0.532227L3.81272 18.6541H0.956443L0.710397 0.532227H4.05877Z" fill="white"></path>
                           </svg>
                         </span>
-                        <span class="fs-1 text-none text-white">0</span>
-                      </div>
+                        <span class="fs-1 text-none text-white">1</span>
+                      </a>
                     </div>
                   </div>
 
