--- a/app/views/article/presidential_election.html.erb
+++ b/app/views/article/presidential_election.html.erb
@@ -18,13 +18,13 @@
         <div class="expander expander-dark-light dark-content" data-target="components--mobile-expander.expander">
           <h1 class="display-5 fw-bold m-0 p-0">Volba prezidenta 2023</h1>
           <div class="fs-6 mt-5">
-            27. a 28. ledna se koná druhé kolo prezidentských voleb. Projekt Demagog.cz i nadále pečlivě sleduje debaty a rozhovory s kandidáty a publikuje hodnocení jejich faktických výroků.
+            27. a 28. ledna se koná druhé kolo prezidentských voleb. Projekt Demagog.cz i&nbsp;nadále pečlivě sleduje debaty a&nbsp;rozhovory s&nbsp;kandidáty a&nbsp;publikuje hodnocení jejich faktických výroků.
           </div>
           <div class="fs-1 fw-bold mt-5">
             <span class="text-primary">183</span> ověřených výroků
           </div>
           <div class="fs-6 mt-5">
-            Níže najdete přehled ověřených výroků dvou kandidátů, kteří postoupili do 2. kola voleb. Výroky budeme postupně aktualizovat a doplňovat.
+            Níže najdete přehled ověřených výroků dvou kandidátů, kteří postoupili do 2.&nbsp;kola voleb. Výroky budeme postupně aktualizovat a&nbsp;doplňovat.
           </div>
           <div class="mt-10">
             <h2 class="fs-1">Statistika kandidátů</h2>
