--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -118,9 +118,9 @@
               <h6 class="small">Demagog.cz ověřuje pravdivost vybraného obsahu pro společnost Meta</h6>
             </div>
           </div>
-          <div class="mt-2">
+          <div class="mt-4">
             <a class="me-4" title="O CEDMO" href="https://cedmohub.eu/cs/">
-              <img loading="lazy" class="h-50px" src="<%= asset_path("cedmo.jpg") %>" />
+              <img loading="lazy" class="mh-100px" src="<%= asset_path("cedmo.jpg") %>" />
             </a>
           </div>
         </div>
@@ -129,10 +129,10 @@
             <div class="col col-12 col-lg-4">
               <h4 class="small mb-2">Projekt Demagog.cz podporují:</h4>
               <div class="d-flex flex-wrap align-items-center">
-                <a class="me-4" title="Nadační fond nezávislé žurnalistiky" href="https://www.nfnz.cz/">
+                <a class="me-4 mb-4" title="Nadační fond nezávislé žurnalistiky" href="https://www.nfnz.cz/">
                   <img loading="lazy" class="h-50px" src="<%= asset_path("partners/nfnz_light.svg") %>" />
                 </a>
-                <a class="me-4" title="Národní plán obnovy" href="https://www.planobnovycr.cz/">
+                <a class="me-4 mb-4" title="Národní plán obnovy" href="https://www.planobnovycr.cz/">
                   <img loading="lazy" class="h-50px" src="<%= asset_path("npo.svg") %>" />
                 </a>
                 <a class="me-4" title="Next Generation EU" href="https://next-generation-eu.europa.eu/index_cs">
