Update footer partners fix 2

--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -118,11 +118,7 @@
               <h6 class="small">Demagog.cz ověřuje pravdivost vybraného obsahu pro společnost Meta</h6>
             </div>
           </div>
-          <div class="mt-4">
-            <a class="me-4" title="O CEDMO" href="https://cedmohub.eu/cs/">
-              <img loading="lazy" class="mh-100px" src="<%= asset_path("cedmo.jpg") %>" />
-            </a>
-          </div>
+
         </div>
         <div class="col col-12 col-md-6 col-lg-12">
           <div class="row g-5">
@@ -148,6 +144,13 @@
                 </a>
                 <a title="Newton Media" href="https://www.newtonmedia.cz/cs">
                   <img loading="lazy" class="h-50px" src="<%= asset_path("partners/newton_media_light.svg") %>" />
+                </a>
+              </div>
+            </div>
+            <div class="col col-12 col-lg-4">
+              <div class="mt-4">
+                <a class="me-4" title="CEDMO" href="https://cedmohub.eu/cs/">
+                  <img loading="lazy" class="mh-80px" src="<%= asset_path("cedmo.jpg") %>" />
                 </a>
               </div>
             </div>
