--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -29,14 +29,25 @@
             </span>
           <% end %>
           <% if promise_rating_key == "partially_fulfilled" %>
-            <span class="w-30px h-30px d-flex align-items-center justify-content-center bg-gray rounded-circle me-2">
+            <span class="w-30px h-30px d-flex align-items-center justify-content-center bg-secondary rounded-circle me-2">
               <svg width="17" height="4" viewBox="0 0 17 4" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1.67756 3.8639C1.25892 3.8639 0.878343 3.71167 0.573881 3.40721C0.269419 3.10274 0.117188 2.72217 0.117188 2.30353C0.117188 1.8849 0.269419 1.50432 0.573881 1.19986C0.878343 0.895395 1.25892 0.743164 1.67756 0.743164C2.09619 0.743164 2.47677 0.895395 2.78123 1.19986C3.08569 1.50432 3.23792 1.8849 3.23792 2.30353C3.23792 2.60799 3.16181 2.83634 3.00958 3.10274C2.85735 3.33109 2.66706 3.52138 2.43871 3.67361C2.21036 3.82584 1.98202 3.8639 1.67756 3.8639ZM8.37572 3.8639C7.95708 3.8639 7.57651 3.71167 7.27204 3.40721C6.96758 3.10274 6.81535 2.72217 6.81535 2.30353C6.81535 1.8849 6.96758 1.50432 7.27204 1.19986C7.57651 0.895395 7.95708 0.743164 8.37572 0.743164C8.79435 0.743164 9.17493 0.895395 9.47939 1.19986C9.78385 1.50432 9.93609 1.8849 9.93609 2.30353C9.93609 2.60799 9.85997 2.83634 9.70774 3.10274C9.55551 3.33109 9.36522 3.52138 9.13687 3.67361C8.90853 3.82584 8.68018 3.8639 8.37572 3.8639ZM15.1119 3.8639C14.6933 3.8639 14.3127 3.71167 14.0083 3.40721C13.7038 3.10274 13.5516 2.72217 13.5516 2.30353C13.5516 1.8849 13.7038 1.50432 14.0083 1.19986C14.3127 0.895395 14.6933 0.743164 15.1119 0.743164C15.5306 0.743164 15.9112 0.895395 16.2156 1.19986C16.5201 1.50432 16.6723 1.8849 16.6723 2.30353C16.6723 2.60799 16.5962 2.83634 16.444 3.10274C16.2917 3.33109 16.1014 3.52138 15.8731 3.67361C15.6447 3.82584 15.3783 3.8639 15.1119 3.8639Z" fill="white"/>
               </svg>
             </span>
-            <span class="fs-4 fw-600 text-uppercase text-gray">
+            <span class="fs-4 fw-600 text-uppercase text-secondary">
               <%= @promise_rating_counts[promise_rating_key] %>
               <%= cs_pluralize(@promise_rating_counts[promise_rating_key], "částečně splněný", "částečně splněné", "částečně splněných") %>
+            </span>
+          <% end %>
+          <% if promise_rating_key == "not_yet_evaluated" %>
+            <span class="w-30px h-30px d-flex align-items-center justify-content-center bg-gray rounded-circle me-2">
+              <svg width="12" height="22" viewBox="0 0 15 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.21838 18.8279V18.6782C5.23443 17.111 5.40024 15.8647 5.71047 14.934C6.0207 14.0086 6.46466 13.2544 7.04233 12.6821C7.62001 12.1098 8.30466 11.5803 9.11233 11.0935C9.59373 10.7993 10.0323 10.4463 10.4174 10.0398C10.8026 9.63328 11.1074 9.16258 11.3321 8.6277C11.5567 8.09281 11.6691 7.50444 11.6691 6.85723C11.6691 6.05491 11.4819 5.35421 11.1021 4.76584C10.7223 4.17747 10.2195 3.71747 9.58838 3.40189C8.95721 3.08096 8.25652 2.92049 7.48094 2.92049C6.80698 2.92049 6.15977 3.05956 5.53396 3.3377C4.90815 3.61584 4.38931 4.05444 3.9721 4.65351C3.55489 5.25258 3.30884 6.03886 3.24466 7.007H0.142334C0.20652 5.61095 0.570241 4.41816 1.2335 3.42328C1.8914 2.4284 2.76861 1.66886 3.85443 1.14468C4.94024 0.620491 6.14908 0.358398 7.48094 0.358398C8.92512 0.358398 10.1821 0.647236 11.2519 1.21956C12.3216 1.79189 13.1507 2.58351 13.7391 3.58375C14.3274 4.58398 14.6216 5.72328 14.6216 7.007C14.6216 7.91095 14.4826 8.72398 14.2098 9.45677C13.937 10.1896 13.5412 10.8421 13.0277 11.4144C12.5142 11.9868 11.8991 12.4949 11.177 12.9389C10.4549 13.3882 9.87721 13.8642 9.43861 14.3616C9.00535 14.8591 8.68977 15.4475 8.49187 16.1268C8.29396 16.8061 8.18698 17.6565 8.17094 18.6728V18.8226H5.21838V18.8279ZM6.79628 26.113C6.18652 26.113 5.66768 25.8937 5.23443 25.4605C4.80117 25.0272 4.58187 24.503 4.58187 23.8986C4.58187 23.2942 4.80117 22.77 5.23443 22.3368C5.66768 21.9035 6.19187 21.6842 6.79628 21.6842C7.4007 21.6842 7.92489 21.9035 8.35814 22.3368C8.7914 22.77 9.0107 23.2942 9.0107 23.8986C9.0107 24.2998 8.90907 24.6689 8.71117 25.0058C8.50791 25.3428 8.24582 25.6102 7.90884 25.8135C7.57721 26.0168 7.2028 26.113 6.79628 26.113Z" fill="white"></path>
+              </svg>
+            </span>
+            <span class="fs-4 fw-600 text-uppercase text-gray">
+              <%= @promise_rating_counts[promise_rating_key] %>
+              <%= cs_pluralize(@promise_rating_counts[promise_rating_key], "zatím nehodnocý", "zatím nehodnocé", "zatím nehodnocených") %>
             </span>
           <% end %>
           <% if promise_rating_key == "broken" %>
@@ -66,10 +77,10 @@
             {
               PromiseRating::FULFILLED => "bg-primary",
               PromiseRating::IN_PROGRESS => "bg-secondary",
-              PromiseRating::PARTIALLY_FULFILLED => "bg-gray",
+              PromiseRating::PARTIALLY_FULFILLED => "bg-secondary",
               PromiseRating::BROKEN => "bg-red",
-              PromiseRating::STALLED => "bg-dark"
-
+              PromiseRating::STALLED => "bg-dark",
+              PromiseRating::NOT_YET_EVALUATED => "bg-gray",
             }[promise_rating_key]
           ) %>"></span>
         </div>
@@ -86,9 +97,10 @@
               {
                 PromiseRating::FULFILLED => "text-primary",
                 PromiseRating::IN_PROGRESS => "text-secondary",
-                PromiseRating::PARTIALLY_FULFILLED => "text-gray",
+                PromiseRating::PARTIALLY_FULFILLED => "text-secondary",
                 PromiseRating::BROKEN => "text-red",
-                PromiseRating::STALLED => "text-dark"
+                PromiseRating::STALLED => "text-dark",
+                PromiseRating::NOT_YET_EVALUATED => "text-gray",
 
               }[promise_rating_key]
             ) %>"><%= @promise_rating_percents[promise_rating_key] %> %</span>
@@ -188,7 +200,8 @@
                       PromiseRating::IN_PROGRESS => "průběžně plněné",
                       PromiseRating::PARTIALLY_FULFILLED =>  "částečně splněné",
                       PromiseRating::BROKEN => "porušené",
-                      PromiseRating::STALLED => "nerealizované"
+                      PromiseRating::STALLED => "nerealizované",
+                      PromiseRating::NOT_YET_EVALUATED => "zatím nehodnoceno",
                     }[promise_rating_key]
                   ) %>
                 </span>
@@ -254,6 +267,11 @@
                   <% if statement.assessment.promise_rating.key.dasherize == "broken" %>
                     <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M12.8642 1.58955L11.4983 0.223633L6.80319 4.90351L2.1081 0.223633L0.742188 1.58955L5.43348 6.26562L0.742188 10.9417L2.1081 12.3076L6.80319 7.62773L11.4983 12.3076L12.8642 10.9417L8.17291 6.26562L12.8642 1.58955Z" fill="white"/>
+                    </svg>
+                  <% end %>
+                  <% if statement.assessment.promise_rating.key.dasherize == "not-yet-evaluated" %>
+                    <svg width="12" height="22" viewBox="0 0 15 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M5.21838 18.8279V18.6782C5.23443 17.111 5.40024 15.8647 5.71047 14.934C6.0207 14.0086 6.46466 13.2544 7.04233 12.6821C7.62001 12.1098 8.30466 11.5803 9.11233 11.0935C9.59373 10.7993 10.0323 10.4463 10.4174 10.0398C10.8026 9.63328 11.1074 9.16258 11.3321 8.6277C11.5567 8.09281 11.6691 7.50444 11.6691 6.85723C11.6691 6.05491 11.4819 5.35421 11.1021 4.76584C10.7223 4.17747 10.2195 3.71747 9.58838 3.40189C8.95721 3.08096 8.25652 2.92049 7.48094 2.92049C6.80698 2.92049 6.15977 3.05956 5.53396 3.3377C4.90815 3.61584 4.38931 4.05444 3.9721 4.65351C3.55489 5.25258 3.30884 6.03886 3.24466 7.007H0.142334C0.20652 5.61095 0.570241 4.41816 1.2335 3.42328C1.8914 2.4284 2.76861 1.66886 3.85443 1.14468C4.94024 0.620491 6.14908 0.358398 7.48094 0.358398C8.92512 0.358398 10.1821 0.647236 11.2519 1.21956C12.3216 1.79189 13.1507 2.58351 13.7391 3.58375C14.3274 4.58398 14.6216 5.72328 14.6216 7.007C14.6216 7.91095 14.4826 8.72398 14.2098 9.45677C13.937 10.1896 13.5412 10.8421 13.0277 11.4144C12.5142 11.9868 11.8991 12.4949 11.177 12.9389C10.4549 13.3882 9.87721 13.8642 9.43861 14.3616C9.00535 14.8591 8.68977 15.4475 8.49187 16.1268C8.29396 16.8061 8.18698 17.6565 8.17094 18.6728V18.8226H5.21838V18.8279ZM6.79628 26.113C6.18652 26.113 5.66768 25.8937 5.23443 25.4605C4.80117 25.0272 4.58187 24.503 4.58187 23.8986C4.58187 23.2942 4.80117 22.77 5.23443 22.3368C5.66768 21.9035 6.19187 21.6842 6.79628 21.6842C7.4007 21.6842 7.92489 21.9035 8.35814 22.3368C8.7914 22.77 9.0107 23.2942 9.0107 23.8986C9.0107 24.2998 8.90907 24.6689 8.71117 25.0058C8.50791 25.3428 8.24582 25.6102 7.90884 25.8135C7.57721 26.0168 7.2028 26.113 6.79628 26.113Z" fill="white"></path>
                     </svg>
                   <% end %>
                 </span>
