Fix yarn versions

--- a/app/views/promises/_100_dni_prezidenta_petra_pavla_intro.html.erb
+++ b/app/views/promises/_100_dni_prezidenta_petra_pavla_intro.html.erb
@@ -1,5 +1,5 @@
-<% content_for(:title, "Sliby prvních 100 dnů prezidenta Petra Pavla") %>
-<% content_for(:description, "Speciální výstup Demagog.cz k plnění slibů prezidenta Petra Pavla") %>
+<% content_for(:title, "100 dní prezidenta Petra Pavla") %>
+<% content_for(:description, "Speciální výstup projektu Demagog.cz k plnění slibů prezidenta Pavla") %>
 
 <div class="row g-5 mb-5">
   <div class="col col-12">
