--- a/app/views/components/_header.html.erb
+++ b/app/views/components/_header.html.erb
@@ -6,6 +6,7 @@
   Struct::NavSubmenu.new(
     'Sliby',
     [
+      Struct::NavLink.new('100 dní prezidenta Petra Pavla (2023)', '/sliby/100-dni-prezidenta-petra-pavla'),
       Struct::NavLink.new('Sliby vlády Andreje Babiše (2018—2021)', '/sliby/druha-vlada-andreje-babise'),
       Struct::NavLink.new('Sliby vlády Bohuslava Sobotky (2014—2017)', '/sliby/sobotkova-vlada'),
       Struct::NavLink.new('Sliby prezidenta Miloše Zemana (2013—2018)', 'https://zpravy.aktualne.cz/domaci/zverejnujeme-velkou-inventuru-zemanovych-slibu-ktere-slovo-d/r~9ebe8728ff6911e7adc2ac1f6b220ee8/')
