Test matomo analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,6 +64,7 @@
       <%= javascript_pack_tag 'widget'  %>
       <%= render partial: "shared/google_analytics" %>
       <%= render partial: "shared/plausibleio_analytics" %>
+      <%= render partial: "shared/matomo_analytics" %>
 
     <% end %>
   </body>
