--- a/app/views/layouts/embed.html.erb
+++ b/app/views/layouts/embed.html.erb
@@ -13,5 +13,6 @@
     <%= javascript_pack_tag 'application'  %>
     <%= render partial: "shared/google_analytics" %>
     <%= render partial: "shared/plausibleio_analytics" %>
+    <%= render partial: "shared/matomo_analytics" %>
   </body>
 </html>
