--- a/app/views/layouts/empty.html.erb
+++ b/app/views/layouts/empty.html.erb
@@ -14,5 +14,6 @@
     <%= javascript_pack_tag 'widget'  %>
     <%= render partial: "shared/google_analytics" %>
     <%= render partial: "shared/plausibleio_analytics" %>
+    <%= render partial: "shared/matomo_analytics" %>
   </body>
 </html>
