--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 
       </div>
     </main>
-    <%= render "components/footer" %>
+    <%= render(FooterComponent.new(cookies: @cookies)) %>
     <%= render "components/cookies" %>
 
 
