Petr Fiala promises page

--- a/app/views/promises/_sliby_vlady_petra_fialy_intro.html.erb
+++ b/app/views/promises/_sliby_vlady_petra_fialy_intro.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title, "Sliby vlády Petra Fialy") %>
-<% content_for(:description, "Speciální výstup projektu Demagog.cz k plnění slibů vlády Petra Fialy") %>
+<% content_for(:description, "Speciální výstup Demagog.cz k plnění slibů vlády Petra Fialy") %>
 
 <div class="row g-5 mb-5">
   <div class="col col-12">
@@ -10,11 +10,11 @@
           <path d="M52.3312 0.0253906C44.9699 0.0253906 38.7395 4.75214 36.5347 11.3008L27.0205 16.5716L36.5658 21.8013C38.7965 28.3038 45.0062 32.9946 52.3312 32.9946C61.5341 32.9946 68.9888 25.6145 68.9888 16.5151C68.9888 7.41575 61.5341 0.0253906 52.3312 0.0253906ZM61.2955 20.082H43.4602V11.9269L48.6427 15.6734L52.2637 11.9269L55.9781 15.8018L61.2903 11.9269V20.082H61.2955Z" fill="#111827"/>
         </svg>
       </span>
-      <h1 class="display-4 fw-bold">100 dní prezidenta Petra Pavla</h1>
+      <h1 class="display-4 fw-bold">Sliby vlády Petra Fialy</h1>
     </div>
   </div>
   <div class="col col-12 col-lg-6">
-    <p class="fs-2 fw-bold">Speciální výstup projektu Demagog.cz k plnění slibů prezidenta Pavla</p>
+    <p class="fs-2 fw-bold">Speciální výstup Demagog.cz k plnění slibů vlády Petra Fialy</p>
   </div>
 </div>
 <div class="row g-10">
@@ -23,12 +23,12 @@
       Vláda Petra Fialy schválila své programové prohlášení již na konci roku 2021 a Demagog.cz nyní přichází s první rozsáhlou analýzou plnění slibů pětikoaličního kabinetu. Z programového prohlášení jsme vybrali padesátku konkrétních, měřitelných a splnitelných slibů napříč šesti tématy a budeme je kontrolovat až do konce volebního období.
     </p>
     <p class="fs-6 mb-5">
-      Je možné, že na některé sliby budete sami nahlížet například jako na nerealizované, ačkoli dle naší <a href="https://demagog.cz/diskuze/overujeme-sliby-vlady-petra-fialy">metodiky</a> stačí už aktivní snaha, např. legislativní práce, k tomu aby byl slib průběžně plněný. Hodnotící kategorie slibu slouží pouze jako výchozí orientační bod a skutečná hodnota spočívá v informacích obsažených v detailním odůvodnění každého hodnocení vč. dat, která k němu používáme. Budeme rádi, když si na základě předložených dat uděláte vlastní závěr.
+      Je možné, že na některé sliby budete sami nahlížet například jako na nerealizované, ačkoli dle naší <a href="https://demagog.cz/diskuze/overujeme-sliby-vlady-petra-fialy">metodiky</a> stačí už aktivní snaha, např. legislativní práce, k tomu, aby byl slib průběžně plněný. Hodnotící kategorie slibu slouží pouze jako výchozí orientační bod. Skutečná hodnota spočívá v informacích obsažených v detailním odůvodnění každého hodnocení, včetně dat, která k němu používáme. Budeme rádi, když si na základě předložených dat uděláte vlastní závěr.
     </p>
   </div>
   <div class="col col-12 col-lg-6">
     <p class="fs-6 mb-5">
-      Hodnocení všech slibů jsme provedli k 30. červnu 2023 a průběžně je budeme aktualizovat. V mezidobí však může docházet ke změnám, které nebudeme schopní obratem do textu zapracovat. Berte to, prosím, na vědomí.
+      Hodnocení všech slibů jsme provedli k 30. červnu 2023 a budeme je průběžně aktualizovat. V mezidobí však může docházet ke změnám, které nebudeme schopní obratem do textu zapracovat. Berte to, prosím, na vědomí.
     </p>
   </div>
 </div>
