Fix statement colors

--- a/app/assets/stylesheets/_varibles.scss
+++ b/app/assets/stylesheets/_varibles.scss
@@ -14,7 +14,7 @@ $text-muted: $gray-500 !default;
 $dark: #111827 !default;
 $dark-light: #172032 !default;
 $primary: #25AD23 !default;
-$primary-light: #5CC25A !default;
+$primary-light: #77CC76 !default;
 $light: $gray-200 !default;
 $primary-dark: #078738 !default;
 $secondary: #FFBF00 !default;
