--- a/app/views/promises/_sliby_vlady_petra_fialy_intro.html.erb
+++ b/app/views/promises/_sliby_vlady_petra_fialy_intro.html.erb
@@ -16,18 +16,14 @@
     <p class="fs-2 fw-bold">Speciální výstup Demagog.cz k plnění slibů vlády Petra Fialy</p>
   </div>
 </div>
-<div class="row g-10">
-  <div class="col col-12 col-lg-6">
-    <p class="fs-6 mb-5">
-      Vláda Petra Fialy schválila své programové prohlášení již na konci roku 2021 a Demagog.cz nyní přichází s první rozsáhlou analýzou plnění slibů pětikoaličního kabinetu. Z programového prohlášení jsme vybrali padesátku konkrétních, měřitelných a splnitelných slibů napříč šesti tématy a budeme je kontrolovat až do konce volebního období.
-    </p>
-    <p class="fs-6 mb-5">
-      Je možné, že na některé sliby budete sami nahlížet například jako na nerealizované, ačkoli dle naší <a href="https://demagog.cz/diskuze/overujeme-sliby-vlady-petra-fialy">metodiky</a> stačí už aktivní snaha, např. legislativní práce, k tomu, aby byl slib průběžně plněný. Hodnotící kategorie slibu slouží pouze jako výchozí orientační bod. Skutečná hodnota spočívá v informacích obsažených v detailním odůvodnění každého hodnocení, včetně dat, která k němu používáme. Budeme rádi, když si na základě předložených dat uděláte vlastní závěr.
-    </p>
-  </div>
-  <div class="col col-12 col-lg-6">
-    <p class="fs-6 mb-5">
-      Hodnocení všech slibů jsme provedli k 30. červnu 2023 a budeme je průběžně aktualizovat. V mezidobí však může docházet ke změnám, které nebudeme schopní obratem do textu zapracovat. Berte to, prosím, na vědomí.
-    </p>
-  </div>
+<div class="column-2">
+  <p class="fs-6 mb-5">
+    Vláda Petra Fialy schválila své programové prohlášení již na konci roku 2021 a Demagog.cz nyní přichází s první rozsáhlou analýzou plnění slibů pětikoaličního kabinetu. Z programového prohlášení jsme vybrali padesátku konkrétních, měřitelných a splnitelných slibů napříč šesti tématy a budeme je kontrolovat až do konce volebního období.
+  </p>
+  <p class="fs-6 mb-5">
+    Je možné, že na některé sliby budete sami nahlížet například jako na nerealizované, ačkoli dle naší <a href="https://demagog.cz/diskuze/overujeme-sliby-vlady-petra-fialy">metodiky</a> stačí už aktivní snaha, např. legislativní práce, k tomu, aby byl slib průběžně plněný. Hodnotící kategorie slibu slouží pouze jako výchozí orientační bod. Skutečná hodnota spočívá v informacích obsažených v detailním odůvodnění každého hodnocení, včetně dat, která k němu používáme. Budeme rádi, když si na základě předložených dat uděláte vlastní závěr.
+  </p>
+  <p class="fs-6 mb-5">
+    Hodnocení všech slibů jsme provedli k 30. červnu 2023 a budeme je průběžně aktualizovat. V mezidobí však může docházet ke změnám, které nebudeme schopní obratem do textu zapracovat. Berte to, prosím, na vědomí.
+  </p>
 </div>
