Fix promises diacritics

--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -74,7 +74,7 @@
             </span>
             <span class="fs-4 fw-600 text-uppercase text-gray">
               <%= @promise_rating_counts[promise_rating_key] %>
-              <%= cs_pluralize(@promise_rating_counts[promise_rating_key], "nerealizovaný", "nerealizované", "nerealizovano") %>
+              <%= cs_pluralize(@promise_rating_counts[promise_rating_key], "nerealizovaný", "nerealizované", "nerealizováno") %>
             </span>
           <% end %>
         </div>
