--- a/app/views/article/_preview.html.erb
+++ b/app/views/article/_preview.html.erb
@@ -18,12 +18,12 @@
   <div class="rest">
     <% unless local_assigns[:show_portraits] == false %>
       <div class="speakers">
-        <% if article.article_type.name == ArticleType::DEFAULT %>
+        <% if article.article_type_default? %>
           <% for source_speaker in article_presenter.factcheck_source_speakers %>
             <%= render(PortraitComponent.new(speaker: source_speaker)) %>
           <% end %>
         <% end %>
-        <% if article.article_type.name == ArticleType::SINGLE_STATEMENT %>
+        <% if article.article_type_single_statement? %>
           <%= render(PortraitComponent.new(speaker: article.single_statement.source_speaker)) %>
         <% end %>
       </div>
@@ -32,26 +32,26 @@
     <h2 class="s-title"><%= link_to(article.title, article_path(article), class: "title") %></h2>
 
     <p class="clickthrough">
-      <% if article.article_type.name == ArticleType::DEFAULT %>
+      <% if article.article_type_default? %>
         <span class="label factcheck">Ověřeno</span>
         <% if article.source %>
           <i><%= article.source.medium.name %>, <%= raw(l(article.source.released_at, format: :long)) %></i>
         <% end %>
       <% end %>
 
-      <% if article.article_type.name == ArticleType::STATIC %>
+      <% if article.article_type_static? %>
         <span class="label editorial">Komentář</span>
         <i><%= raw(l(article.published_at, format: :long)) %></i>
       <% end %>
 
-      <% if article.article_type.name == ArticleType::SINGLE_STATEMENT %>
+      <% if article.article_type_single_statement? %>
         <span class="label veracity <%= article.single_statement.approved_assessment.veracity.default_name %>">
           <%= article.single_statement.approved_assessment.veracity.name %>
         </span>
         <i><%= article.single_statement.source.medium.name %>, <%= raw(l(article.single_statement.source.released_at, format: :long)) %></i>
       <% end %>
 
-      <% if article.article_type.name == ArticleType::FACEBOOK_FACTCHECK %>
+      <% if article.article_type_facebook_factcheck? %>
         <span class="label facebook-factcheck">Facebook factcheck</span>
         <i><%= raw(l(article.published_at, format: :long)) %></i>
       <% end %>
@@ -61,17 +61,17 @@
         <%= strip_tags(article.perex).truncate(230) %>
       <% end %>
 
-      <% if article.article_type.name == ArticleType::SINGLE_STATEMENT %>
+      <% if article.article_type_single_statement? %>
         &mdash;
         „<%= article.single_statement.content.strip %>“
       <% end %>
 
-      <% if article.article_type.name == ArticleType::DEFAULT || article.article_type.name == ArticleType::STATIC || article.article_type.name == ArticleType::FACEBOOK_FACTCHECK %>
+      <% if article.article_type_default? || article.article_type_static? || article.article_type_facebook_factcheck? %>
         <a href="<%= article_path(article) %>">
           <span>Číst&nbsp;dál&nbsp;&rarr;</span>
         </a>
       <% end %>
-      <% if article.article_type.name == ArticleType::SINGLE_STATEMENT %>
+      <% if article.article_type_single_statement? %>
         <a href="<%= statement_path(article.single_statement) %>">
           <span>Číst&nbsp;odůvodnění&nbsp;&rarr;</span>
         </a>
