--- a/app/views/components/_article_main.html.erb
+++ b/app/views/components/_article_main.html.erb
@@ -32,24 +32,22 @@
             <span class="smaller fw-bold text-uppercase">Ověřeno</span>
           <% end %>
           <% if article.article_type_single_statement? %>
-            <% if article.single_statement.approved_assessment.veracity.default_name == "untrue" %>
+            <% if article.single_statement.approved_assessment.veracity_untrue? %>
               <div class="d-flex align-items-center">
                 <span class="smaller fw-bold text-uppercase text-danger">
-                  <%= article.single_statement.approved_assessment.veracity.name %>
+                  <%= article.single_statement.approved_assessment.veracity_name %>
                 </span>
                 <svg class="ms-2" width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M15 29.834C23.0091 29.834 29.5 23.343 29.5 15.334C29.5 7.32493 23.0091 0.833984 15 0.833984C6.99095 0.833984 0.5 7.32493 0.5 15.334C0.5 23.343 6.99095 29.834 15 29.834Z" fill="#E32219"/>
                   <path d="M21.061 10.6579L19.6951 9.29199L15 13.9719L10.3049 9.29199L8.93896 10.6579L13.6303 15.334L8.93896 20.01L10.3049 21.376L15 16.6961L19.6951 21.376L21.061 20.01L16.3697 15.334L21.061 10.6579Z" fill="white"/>
                 </svg>
-
-
               </div>
             <% end %>
 
-            <% if article.single_statement.approved_assessment.veracity.default_name == "true" %>
+            <% if article.single_statement.approved_assessment.veracity_true? %>
               <div class="d-flex align-items-center">
                 <span class="smaller fw-bold text-uppercase text-primary">
-                  <%= article.single_statement.approved_assessment.veracity.name %>
+                  <%= article.single_statement.approved_assessment.veracity_name %>
                 </span>
                 <svg class="ms-2" width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M15 29.834C23.0091 29.834 29.5 23.343 29.5 15.334C29.5 7.32493 23.0091 0.833984 15 0.833984C6.99095 0.833984 0.5 7.32493 0.5 15.334C0.5 23.343 6.99095 29.834 15 29.834Z" fill="#25AD23"/>
