--- a/app/components/footer_component.html.erb
+++ b/app/components/footer_component.html.erb
@@ -99,7 +99,7 @@
           <div class="d-flex">
             <div class="mw-100px w-100 me-5 mb-5">
               <a href="https://ifcncodeofprinciples.poynter.org/profile/demagogcz" target="_blank">
-                <img class="mw-100 w-100" src="https://cdn.ifcncodeofprinciples.poynter.org/storage/badges/36C9D629-AED1-C760-8B88-9FD45DD9156F.png" alt="Demagog.cz is IFCN signatory"  />
+                <img class="mw-100 w-100" src="https://www.ifcncodeofprinciples.poynter.org/storage/badges/36C9D629-AED1-C760-8B88-9FD45DD9156F.png" alt="Demagog.cz is IFCN signatory"  />
               </a>
             </div>
             <div>
