--- a/app/views/promises/_sliby_vlady_petra_fialy_intro.html.erb
+++ b/app/views/promises/_sliby_vlady_petra_fialy_intro.html.erb
@@ -18,10 +18,13 @@
 </div>
 <div class="column-2">
   <p class="fs-6 mb-5">
-    Při příležitosti dvou let od jmenování vlády Petra Fialy přichází Demagog.cz s další rozsáhlou analýzou plnění slibů pětikoaličního kabinetu. Z programového prohlášení, které vláda schválila na konci roku 2021, jsme vybrali padesátku konkrétních, měřitelných a splnitelných slibů napříč šesti tématy a budeme je kontrolovat až do konce volebního období.
+    Při příležitosti dvou let od jmenování vlády Petra Fialy přichází Demagog.cz s rozsáhlou analýzou plnění slibů pětikoalice. Z programového prohlášení, které vláda schválila na začátku roku 2022, jsme vybrali padesátku konkrétních, měřitelných a splnitelných slibů napříč šesti tématy a budeme je pravidelně kontrolovat až do konce volebního období.
   </p>
   <p class="fs-6 mb-5">
-    Je možné, že na některé sliby budete sami nahlížet například jako na nerealizované, ačkoli dle naší <a href="https://demagog.cz/diskuze/overujeme-sliby-vlady-petra-fialy">metodiky</a> stačí už aktivní snaha, např. legislativní práce, k tomu, aby byl slib průběžně plněný. Hodnotící kategorie slibu slouží pouze jako výchozí orientační bod. Skutečná hodnota spočívá v informacích obsažených v detailním odůvodnění každého hodnocení, včetně dat, která k němu používáme. Budeme rádi, když si na základě předložených dat uděláte vlastní závěr.
+    V březnu 2023 vláda schválila aktualizaci svého programového prohlášení a několik závazků změnila. Naše hodnocení ale vychází z původního znění vládního prohlášení z roku 2022, abychom byli konzistentní s naší kontrolou závazků u předchozích vlád.
+  </p>
+  <p class="fs-6 mb-5">
+    Je možné, že na některé sliby budete sami nahlížet jako na nerealizované, ačkoli dle naší <a href="https://demagog.cz/diskuze/overujeme-sliby-vlady-petra-fialy">metodiky</a> stačí už aktivní snaha, např. legislativní práce, k tomu, abychom slib označili za rozpracovaný. Hodnoticí kategorie slibu můžete považovat za výchozí bod a udělat si vlastní závěr podle detailních informací, které najdete u každého našeho hodnocení, včetně dat a zdrojů, které k němu používáme.
   </p>
   <p class="fs-6 mb-5">
     Hodnocení všech slibů jsme provedli k 30. listopadu 2023 a budeme je průběžně aktualizovat. V mezidobí však může docházet ke změnám, které nebudeme schopní obratem do textu zapracovat. Berte to, prosím, na vědomí.
