Remove unused code and refactor 'tag' rendering

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -6,7 +6,7 @@
     [
       Struct::NavLink.new('Diskuze', '/diskuze'),
       Struct::NavLink.new('Sociální sítě', '/socialni-site'),
-      Struct::NavLink.new('Spolupráce s Facebookem', '/spoluprace-s-facebookem')
+      Struct::NavLink.new('Spolupráce s Facebookem', facebook_collab_path)
     ]
   ),
   Struct::NavLink.new("Komentáře", '/komentare'),
