Fix bug with description section on tags and renamed donations

--- a/app/views/components/_header.html.erb
+++ b/app/views/components/_header.html.erb
@@ -91,7 +91,7 @@
                   data-action="click->components--modal#openModal"
                   data-modal-id="modalDanate"
                 >
-                  <span class="mx-2">Darujte</span>
+                  <span class="mx-2">Podpořte nás</span>
                 </a>
               </div>
           </nav>
@@ -146,7 +146,7 @@
               data-action="click->components--modal#openModal"
               data-modal-id="modalDanate"
             >
-              <span class="mx-2">Darujte</span>
+              <span class="mx-2">Podpořte nás</span>
             </a>
           </div>
         </div>
